--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -36,6 +36,12 @@ wx:
           token: #微信小程序消息服务器配置的token
           aesKey: #微信小程序消息服务器配置的EncodingAESKey
           msgDataFormat: JSON
+
+    exception:
+      exceptionList:
+        - status: 100
+          mesg: 登陆异常
+
 pic:
   upload:
     path: D:\tmp
